Bug 547891 - [13] flag error for unqualified yield method invocations and yield type - yield yield processing
Change-Id: Ie5df9fb9d6e71a120cf9beffbf0121f762f25830